--- a/conway.html
+++ b/conway.html
@@ -8,10 +8,13 @@
         <script type="application/javascript" src="conway.js"></script>
     </head>
     <body>
-        <canvas id="canvas" width="1000" height="600"></canvas>
-        <button id="step" type="button">Step</button>
-        <button id="run" type="button">Run</button>
-        <button id="randomize" type="button">Randomize</button>
-        <button id="clear" type="button">Clear</button>
+        <div id="wrapper">
+            <canvas id="canvas" width="1000" height="600"></canvas>
+            <button id="step" type="button">Step</button>
+            <button id="run" type="button">Run</button>
+            <button id="randomize" type="button">Randomize</button>
+            <button id="clear" type="button">Clear</button>
+            <div id="counter">Generations: <span id="counter-value">0</span></div>
+        </div>
     </body>
 </html>
